ecmascript/parser/tests/test262-error-references/fail/db41a80ccf646002.js.stderr
error: Not a pattern
 --> $DIR/tests/test262-parser/fail/db41a80ccf646002.js:1:2
  |
1 | [(a = 0)] = 1
  |  ^^^^^^^

